product_docs/docs/bart/2.5.2/bart_qs_guide/02_configuring_bart.mdx
---
title: "Configuring BART"
---

<div id="configuring_bart" class="registered_link"></div>


To configure the BART host and each database server that is to be managed by BART, you must:

1.  Establish the BART user account and ensure it runs the `bart` and the `bart-scanner` program.

2.  Use the `bart.cfg.sample` file to create the `bart.cfg` file. The BART configuration file is located in `<BART_HOME>/etc/bart.cfg`:

    > `cp bart.cfg.sample bart.cfg`

3.  Set the environment variable for the BART user account. If the `libpq` library does not reside in the default installation location, you must add the `libpq` library to the `LD_LIBRARY_PATH` environment variable and place the following settings in the BART user account’s profile so they take effect upon login:

<!-- -->

    # .bash\_profile
    # Get the aliases and functions
    if [ -f ~/.bashrc ]; then
    . ~/.bashrc
    fi

    # User specific environment and startup programs

    export LD_LIBRARY_PATH=/usr/edb/as11/lib:$LD_LIBRARY_PATH

1.  Set the following parameters in the `[BART]` section of the BART configuration file:

> **bart\_host** (**required**)
>
> > Use this field to specify the IP address of the host where BART is installed, in the form of `<bart_user>@<bart_host_address>`.
>
> **backup\_path (required)**
>
> > Use this field to specify the path to the file system parent directory where all BART backups and archived WAL files will be stored. Ensure the BART user account owns the location specified in the `backup_path` parameter.
>
> **pg\_basebackup\_path** (**required**)
>
> > Use this field to specify the path to the `pg_basebackup` utility.
>
> **xlog\_method (optional)**
>
> > Use this field to specify how the transaction log should be collected during the execution of `pg_basebackup`. The default value is `fetch`; it specifies that the transaction log files will be collected after backup is completed. Set to `stream` to stream the transaction log in parallel with the full backup creation.
>
> **retention\_policy (optional)**
>
> > Use this field to specify the retention policy for the backup. This determines when an active backup should be marked as `obsolete`, and hence, be a candidate for deletion. You can specify the retention policy in terms of number of backup or in terms of duration (days, weeks, or months). For example, `max_number BACKUPS` (default setting), `max_number DAYS`, `max_number WEEKS`, or `max_number MONTHS` where `max_number` is a positive integer.
>
> **wal\_compression (optional)**
>
> > Use this field to specify if you want to compress the archived Xlog/WAL files in gzip format. Set to `enabled` to compress the archived WAL files in gzip format when the `MANAGE` subcommand is invoked.
> >
> > To enable WAL compression, the gzip compression program must be present in the BART user account’s PATH. The WAL compression setting must not be enabled for those database servers where you need to take incremental backups.
>
> **copy\_wals\_during\_restore (optional)**
>
> > Use this field to specify how the archived WAL files are collected when invoking the `RESTORE` operation. Set to `enabled` to copy the archived WAL files from the BART backup catalog to the `<restore_path>/<archived_wals>` directory prior to the database server archive recovery. Set to `disabled` to retrieve the archived WAL files directly from the BART backup catalog during the database server archive recovery. Enabling this option helps you save time during the restore operation.
>
> **logfile (optional)**
>
> > Use this field to specify the path to the BART log file.
>
> **scanner\_logfile (optional)**
>
> > Use this field to specify the path to the Xlog/WAL scanner log file. BART does not create a WAL scanner log file if you do not specify the path.
>
> **bart\_socket\_directory (optional) -**
>
> > Use this field to specify the socket directory path where all BART sockets will be stored. The default directory is `/tmp`.
> >
> > While specifying the `bart_socket_directory` path, you must ensure that the directory exists and the BART user has the required directory access permissions.
>
> **thread\_count (optional)**
>
> > Use this field to specify the number of worker threads to copy blocks or data files from the database server to the BART backup catalog.
> >
> > Specify a thread count of 1 if you want to take the backup using the `pg_basebackup` utility.
>
> **batch\_size (optional)**
>
> > Use this field to specify the number of blocks of memory used for copying modified blocks from the database server to the BART backup catalog when the `BACKUP` subcommand is invoked for incremental backups. The maximum permitted value is 131072 (131072 \* 8192 = 1 GB). The minimum permitted value is 1 (1 \* 8192 = 8192 bytes).
>
> **scan\_interval (optional)**
>
> > Use this field to specify the number of seconds after which the WAL scanner should scan the new WAL files. The default value is 0, which means no brute-force scanning will be started.
>
> **mbm\_scan\_timeout** **(optional)**
>
> > Use this field to specify the number of seconds to wait for MBM files before timing out; the default value is 20 seconds. The value must be greater than 0. The `mbm_scan_timeout` parameter is applicable only for incremental backup.
>
> **workers (optional)**
>
> > Use this field to specify the number of parallel worker processes required to stream the modified blocks of an incremental backup to the restore host. The default value is `1`.

1.  Invoke the `CHECK-CONFIG` subcommand omitting the `-s` option to check the parameter settings in the BART configuration file including `bart_host`, `backup_path`, and `pg_basebackup_path`.
2.  Set the following parameters for each database server in the server section of the BART configuration file. The parameter setting in the server section overrides the setting in the global \[BART\] section for that particular database server.

> **\[ServerName\] (required)**
>
> > Specify a database server name.
>
> **backup\_name (optional)**
>
> > Specify user-friendly name for the backups of the database server.
>
> **host (required)**
>
> > Specify the IP address of the database server to be configured for backup.
>
> **port (optional)**
>
> > Specify the port number identifying the database server instance to be backed up. The default is port `5444`.
>
> **user (required)**
>
> > Specify the replication database user name used by BART to establish the connection to the database server for full backups.
>
> **archive\_path (optional)** – Specify the path where archived WAL files will be stored. The default location of the archived WAL files is the BART backup catalog (`backup_path/server_name/archived_wals`).
>
> **archive\_command (optional)**
>
> > Use this field to specify the desired format of the archive command string to be used in the `bart.cfg` file.
>
> **cluster\_owner (required)**
>
> > Specify the Linux operating system user account that owns the database cluster. This is typically `enterprisedb` for Advanced Server clusters installed in compatible mode, or `postgres` for PostgreSQL or Advanced Server clusters installed in the PostgreSQL compatible mode.
>
> **remote\_host (optional)**
>
> > Use this field to specify the IP address of the remote server to which a backup is to be restored.
> >
> > Specify the value in the form of `<remote_user>@<remote_host_address>` `<remote_user>` is the user account on the target database server host that accepts a passwordless SSH/SCP login connection and owns the directory where the backup is to be restored. `<remote_host_address>` is the IP address of the remote host where you want to restore the backup.
>
> **tablespace\_path (optional)**
>
> > Use this field to specify the path to which tablespaces are to be restored. Specify this parameter value in the `OID = tablespace_path; OID = tablespace_path` … format. If the backup is to be restored to a remote host (specified by the `remote_host` parameter), then the tablespace must exist on the remote host.
>
> **allow\_incremental\_backups (optional)**
>
> > Set this parameter to `enabled` to permit incremental backups.
>
> **description (optional)**
>
> > Use this field to specify the database server description.

For detailed information about configuring the following optional parameters in the server section, refer to the *BART Installation and Upgrade Guide* available at:

<https://www.enterprisedb.com/edb-docs/>

> -   `Retention_policy`
> -   `xlog_method`
> -   `wal_compression`
> -   `copy_wals_during_restore`
> -   `thread_count`
> -   `batch_size`
> -   `scan_interval`
> -   `mbm_scan_timeout`
> -   `workers`
